Refactoring image upload, the backend uploads to /public/catalog, and the frontend uploads to /public/upload, without the need to run php artisan storage:link.
remove storage:link

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 /.phpunit.cache
 /node_modules
+/public/catalog
 /public/hot
 /public/storage
 /public/themes
+/public/upload
 /public/mix-manifest.json
 /storage/*.key
 /storage/installed
